<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/text_color_dark"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/metric_converter"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Creator Text -->
    <TextView
        android:id="@+id/Pembuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/by_febrian_hemeto"
        android:textColor="@color/text_color_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pembuat">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Metric Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_metric"
                    android:textColor="@color/text_color_dark" />

               <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/metricInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_metric"
                    app:boxStrokeColor="@color/purple_500"
                    app:hintTextColor="@color/purple_500">

                    <AutoCompleteTextView
                        android:id="@+id/metricAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:minHeight="48dp"
                        android:textColor="@color/text_color_dark"
                        android:contentDescription="@string/select_metric_description"
                        android:focusable="false"
                        android:clickable="true"
                        style="@style/CustomAutoCompleteTextViewStyle"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- From Unit Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/from"
                    android:textColor="@color/text_color_dark" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/unitFromInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_unit_prompt"
                    app:boxStrokeColor="@color/purple_500"
                    app:hintTextColor="@color/purple_500">

                    <AutoCompleteTextView
                        android:id="@+id/unitFromAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:minHeight="48dp"
                        android:textColor="@color/text_color_dark"
                        android:contentDescription="@string/from_unit_description"
                        android:focusable="false"
                        android:clickable="true"
                        style="@style/CustomAutoCompleteTextViewStyle"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- To Unit Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/to"
                    android:textColor="@color/text_color_dark" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/unitToInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_unit_prompt"
                    app:boxStrokeColor="@color/purple_500"
                    app:hintTextColor="@color/purple_500">

                    <AutoCompleteTextView
                        android:id="@+id/unitToAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:minHeight="48dp"
                        android:textColor="@color/text_color_dark"
                        android:contentDescription="@string/to_unit_description"
                        android:focusable="false"
                        android:clickable="true"
                        style="@style/CustomAutoCompleteTextViewStyle"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Input Value Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/value"
                    android:textColor="@color/text_color_dark" />

                <EditText
                    android:id="@+id/inputValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/text_color_dark"
                    android:hint="@string/input_value_hint"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:autofillHints="none" />
            </LinearLayout>


            <!-- conversition result -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/text_color_dark"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/conversion_result_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conversionResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
                

            <!-- Card untuk Penjelasan Konversi -->
            <androidx.cardview.widget.CardView
                android:id="@+id/conversionExplanationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/text_color_dark"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/conversion_explanation_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conversionExplanationText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card untuk Metric Facts -->
            <androidx.cardview.widget.CardView
                android:id="@+id/metricFactCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/text_color_dark"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/metric_fact_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/metricFactText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>